SIMULACION BOCETO 1